--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,26 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-    padding: 10px;
+html, body {
     min-height: 100vh;
 }
 
-header {
-    margin-bottom: 10px;
+body {
+    font-size: 1.2em;
+    background-color: #a70303;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 10% 80% 10%;
 }
 
 h2 {
     color: blue;
+    font-size: 2em;
+}
+
+main, header {
+    padding: 10px;
+    background-color: white;
 }
 
 section.text {
@@ -38,7 +47,7 @@ section.text {
 
 .text textarea {
     width: 100%;
-    height: 50vh;
+    height: 30vh;
     border: 1px solid rgba(0,0,0,.5);
     border-radius: 10px;
     padding: 5px;
@@ -46,6 +55,7 @@ section.text {
 
 select {
     padding: 10px;
+    border-radius: 10px;
 }
 
 button {
@@ -67,13 +77,16 @@ section > audio {
     width: 100%;
 }
 
+
 footer {
-    background-color: #cecece;
-    position: absolute;
-    width: 100vw;
-    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    background-color: #606060;
     padding: 10px;
-    left: 0;
+    height: 100%;
+    color: white;
     text-align: center;
-    font-size: 1.3em;
 }
